# SF_CHAT_QT_WTTBD

./: CMakeLists.txt
sources/: CommandLineInterface.cpp  CommandLineInterface.h  Database.cpp  Database.h  Parsing.cpp  User.cpp  User.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  startscreen.ui
translations/: my_ru.ts
